objects/LBI_eCommerce_Data__c.object
<CustomObject>
    <description>Supplemental Info custom object for our eCommerce type plays</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>LBI eCommerce Datas</relationshipLabel>
        <relationshipName>LBI_eCommerce_Datas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cust_ID__c</fullName>
        <label>Cust ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fiscal_Period__c</fullName>
        <label>Date (Click Twice to Sort)</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Num_of_Orders__c</fullName>
        <label>Num of Orders</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Play__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Play</label>
        <referenceTo>LBI__Play__c</referenceTo>
        <relationshipLabel>LBI eCommerce Datas</relationshipLabel>
        <relationshipName>LBI_eCommerce_Datas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Category__c</fullName>
        <label>Product Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Qty__c</fullName>
        <label>Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SKU__c</fullName>
        <label>SKU</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales__c</fullName>
        <label>Sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Story_Type__c</fullName>
        <label>Story_Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscription_Item_Class__c</fullName>
        <label>Subscription Item Class</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscription_SKU__c</fullName>
        <label>Subscription SKU</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unsubscribed_Item_Class__c</fullName>
        <label>Unsubscribed Item Class</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unsubscribed_SKU__c</fullName>
        <label>Unsubscribed SKU</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Web_User_Name__c</fullName>
        <label>Web User Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Webuser_Email__c</fullName>
        <label>Webuser Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Weeks_Ordered__c</fullName>
        <label>Weeks Ordered</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>LBI eCommerce Data</label>
    <nameField>
        <label>LBI eCommerce Data Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LBI eCommerce Datas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>